parser/team15/TytusDB_G15/gramatica/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOLEAN
    DAY
    ENUM
    FALSE
    HOUR
    MINUTE
    MONEY
    MONTH
    MULTI
    SECOND
    TRUE
    YEAR

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> create_Table_isnrt
Rule 5     instruccion -> select_insrt
Rule 6     instruccion -> insert_insrt
Rule 7     instruccion -> delete_insrt
Rule 8     instruccion -> update_insrt
Rule 9     instruccion -> alterDB_insrt
Rule 10    instruccion -> alterTable_insrt
Rule 11    instruccion -> drop_insrt
Rule 12    instruccion -> USE ID DATABASE PTCOMA
Rule 13    drop_insrt -> DROP TABLE lista_tablas_lista PTCOMA
Rule 14    lista_tablas_lista -> lista_tablas_lista COMA lista_tabla
Rule 15    lista_tablas_lista -> lista_tabla
Rule 16    lista_tabla -> ID
Rule 17    alterDB_insrt -> ALTER DATABASE ID opcion_alterDB
Rule 18    opcion_alterDB -> RENAME TO ID PTCOMA
Rule 19    opcion_alterDB -> OWNER TO usuarioDB PTCOMA
Rule 20    usuarioDB -> ID
Rule 21    usuarioDB -> CURRENT_USER
Rule 22    usuarioDB -> SESSION_USER
Rule 23    alterTable_insrt -> ALTER TABLE ID alterTable_type PTCOMA
Rule 24    alterTable_type -> ADD alterTable_add
Rule 25    alterTable_type -> alterTable_alter
Rule 26    alterTable_type -> DROP CONSTRAINT ID
Rule 27    alterTable_type -> RENAME COLUMN ID TO ID
Rule 28    alterTable_add -> COLUMN ID TIPO_DATO
Rule 29    alterTable_add -> CHECK PAR_A expresion_logica PAR_C
Rule 30    alterTable_add -> CONSTRAINT ID constraint_esp
Rule 31    alterTable_add -> FOREIGN KEY PAR_A campos_c PAR_C REFERENCES campos_c
Rule 32    constraint_esp -> CHECK PAR_A expresion_logica PAR_C
Rule 33    constraint_esp -> UNIQUE PAR_A campos_c PAR_C
Rule 34    constraint_esp -> FOREIGN KEY PAR_A campos_c PAR_C REFERENCES campos_c
Rule 35    alterTable_alter -> alterTable_alter COMA Table_alter
Rule 36    alterTable_alter -> Table_alter
Rule 37    Table_alter -> ALTER COLUMN ID alter_type
Rule 38    alter_type -> TYPE TIPO_DATO
Rule 39    alter_type -> SET NOT NULL
Rule 40    campos_c -> campos_c COMA ID
Rule 41    campos_c -> ID
Rule 42    create_Table_isnrt -> CREATE TABLE ID PAR_A cuerpo_createTable_lista PAR_C PTCOMA
Rule 43    create_Table_isnrt -> CREATE TABLE ID PAR_A cuerpo_createTable_lista PAR_C herencia PTCOMA
Rule 44    herencia -> INHERITS PAR_A ID PAR_C
Rule 45    cuerpo_createTable_lista -> cuerpo_createTable_lista COMA cuerpo_createTable
Rule 46    cuerpo_createTable_lista -> cuerpo_createTable
Rule 47    cuerpo_createTable -> ID TIPO_DATO
Rule 48    TIPO_DATO -> TEXT
Rule 49    TIPO_DATO -> FLOAT
Rule 50    TIPO_DATO -> INT
Rule 51    TIPO_DATO -> SMALLINT
Rule 52    TIPO_DATO -> DECIMAL PAR_A ENTERO COMA ENTERO PAR_C
Rule 53    TIPO_DATO -> NUMERIC PAR_A ENTERO COMA ENTERO PAR_C
Rule 54    TIPO_DATO -> BIGINT
Rule 55    TIPO_DATO -> REAL
Rule 56    TIPO_DATO -> DOUBLE PRECISION
Rule 57    TIPO_DATO -> CHARACTER VARYING PAR_A ENTERO PAR_C
Rule 58    TIPO_DATO -> TIMESTAMP
Rule 59    TIPO_DATO -> TIME
Rule 60    TIPO_DATO -> DATE
Rule 61    TIPO_DATO -> INTERVAL APOSTROFE ID APOSTROFE
Rule 62    TIPO_DATO -> VARCHAR PAR_A ENTERO PAR_C
Rule 63    TIPO_DATO -> CHAR PAR_A ENTERO PAR_C
Rule 64    update_insrt -> UPDATE ID SET lista_update WHERE ID IGUAL datos_insert PTCOMA
Rule 65    lista_update -> lista_update COMA parametro_update
Rule 66    lista_update -> parametro_update
Rule 67    parametro_update -> ID IGUAL datos_insert
Rule 68    delete_insrt -> DELETE FROM delete_esp delete_opcional
Rule 69    delete_esp -> ONLY ID
Rule 70    delete_esp -> ID delete_parm
Rule 71    delete_parm -> delete_cond_where
Rule 72    delete_parm -> RETURNING returning_exp
Rule 73    delete_parm -> USING ID delete_cond_where
Rule 74    delete_parm -> AS ID delete_cond_where
Rule 75    delete_cond_where -> WHERE delete_condt
Rule 76    delete_condt -> expresion_logica
Rule 77    delete_condt -> ID IN PAR_A sub_queri PAR_C
Rule 78    delete_opcional -> PTCOMA
Rule 79    delete_opcional -> RETURNING returning_exp PTCOMA
Rule 80    returning_exp -> ASTERISCO
Rule 81    returning_exp -> campos_c
Rule 82    sub_queri -> SELECT
Rule 83    select_insrt -> SELECT opcion_select_lista FROM ID AS ID PTCOMA
Rule 84    select_insrt -> SELECT opcion_select_lista FROM ID AS ID LISTA_SELECT_LISTA PTCOMA
Rule 85    LISTA_SELECT_LISTA -> LISTA_SELECT_LISTA LISTA_SELECT
Rule 86    LISTA_SELECT_LISTA -> LISTA_SELECT
Rule 87    LISTA_SELECT -> INNER_JOIN
Rule 88    LISTA_SELECT -> WHERE_INSRT
Rule 89    WHERE_INSRT -> WHERE expresion_logica
Rule 90    opcion_select_lista -> opcion_select_lista COMA opcion_select
Rule 91    opcion_select_lista -> opcion_select
Rule 92    opcion_select -> ASTERISCO
Rule 93    opcion_select -> sum_insrt
Rule 94    opcion_select -> count_insrt
Rule 95    opcion_select -> ID
Rule 96    opcion_select -> ID PUNTO ID
Rule 97    opcion_select -> case_insrt
Rule 98    case_insrt -> CASE ID estructura_when_lista ELSE datos_insert END
Rule 99    case_insrt -> CASE estructura_when_lista ELSE datos_insert END
Rule 100   estructura_when_lista -> estructura_when_lista estructura_when
Rule 101   estructura_when_lista -> estructura_when
Rule 102   estructura_when -> WHEN expresion_logica THEN datos_insert
Rule 103   INNER_JOIN -> INNER JOIN ID AS ID ON CONDICION_INNER_JOIN
Rule 104   CONDICION_INNER_JOIN -> expresion_logica
Rule 105   sum_insrt -> SUM PAR_A ID PAR_C
Rule 106   count_insrt -> COUNT PAR_A ID PAR_C
Rule 107   count_insrt -> COUNT PAR_A ASTERISCO PAR_C
Rule 108   insert_insrt -> INSERT INTO ID PAR_A lista_parametros_lista PAR_C VALUES PAR_A lista_datos PAR_C PTCOMA
Rule 109   insert_insrt -> INSERT INTO ID VALUES PAR_A lista_datos PAR_C PTCOMA
Rule 110   lista_parametros_lista -> lista_parametros_lista COMA lista_parametros
Rule 111   lista_parametros_lista -> lista_parametros
Rule 112   lista_parametros -> ID
Rule 113   lista_datos -> lista_datos COMA expresion_relacional
Rule 114   lista_datos -> expresion_relacional
Rule 115   datos_insert -> CADENA
Rule 116   datos_insert -> RESTA ENTERO
Rule 117   datos_insert -> ENTERO
Rule 118   datos_insert -> PAR_A expresion_logica PAR_C
Rule 119   datos_insert -> ID
Rule 120   datos_insert -> ID PUNTO ID
Rule 121   datos_insert -> datos_insert SUMA datos_insert
Rule 122   datos_insert -> datos_insert RESTA datos_insert
Rule 123   datos_insert -> datos_insert ASTERISCO datos_insert
Rule 124   datos_insert -> datos_insert DIV datos_insert
Rule 125   expresion_relacional -> datos_insert MAYQUE datos_insert
Rule 126   expresion_relacional -> datos_insert MENQUE datos_insert
Rule 127   expresion_relacional -> datos_insert MAYIGQUE datos_insert
Rule 128   expresion_relacional -> datos_insert MENIGQUE datos_insert
Rule 129   expresion_relacional -> datos_insert DOBLEIG datos_insert
Rule 130   expresion_relacional -> datos_insert IGUAL datos_insert
Rule 131   expresion_relacional -> datos_insert NOIG datos_insert
Rule 132   expresion_relacional -> datos_insert
Rule 133   expresion_logica -> expresion_relacional AND expresion_logica
Rule 134   expresion_logica -> expresion_relacional OR expresion_logica
Rule 135   expresion_logica -> expresion_relacional

Terminals, with rules where they appear

ADD                  : 24
ALTER                : 17 23 37
AND                  : 133
APOSTROFE            : 61 61
AS                   : 74 83 84 103
ASTERISCO            : 80 92 107 123
BIGINT               : 54
BOOLEAN              : 
CADENA               : 115
CASE                 : 98 99
CHAR                 : 63
CHARACTER            : 57
CHECK                : 29 32
COLUMN               : 27 28 37
COMA                 : 14 35 40 45 52 53 65 90 110 113
CONSTRAINT           : 26 30
COUNT                : 106 107
CREATE               : 42 43
CURRENT_USER         : 21
DATABASE             : 12 17
DATE                 : 60
DAY                  : 
DECIMAL              : 52
DELETE               : 68
DIV                  : 124
DOBLEIG              : 129
DOUBLE               : 56
DROP                 : 13 26
ELSE                 : 98 99
END                  : 98 99
ENTERO               : 52 52 53 53 57 62 63 116 117
ENUM                 : 
FALSE                : 
FLOAT                : 49
FOREIGN              : 31 34
FROM                 : 68 83 84
HOUR                 : 
ID                   : 12 16 17 18 20 23 26 27 27 28 30 37 40 41 42 43 44 47 61 64 64 67 69 70 73 74 77 83 83 84 84 95 96 96 98 103 103 105 106 108 109 112 119 120 120
IGUAL                : 64 67 130
IN                   : 77
INHERITS             : 44
INNER                : 103
INSERT               : 108 109
INT                  : 50
INTERVAL             : 61
INTO                 : 108 109
JOIN                 : 103
KEY                  : 31 34
MAYIGQUE             : 127
MAYQUE               : 125
MENIGQUE             : 128
MENQUE               : 126
MINUTE               : 
MONEY                : 
MONTH                : 
MULTI                : 
NOIG                 : 131
NOT                  : 39
NULL                 : 39
NUMERIC              : 53
ON                   : 103
ONLY                 : 69
OR                   : 134
OWNER                : 19
PAR_A                : 29 31 32 33 34 42 43 44 52 53 57 62 63 77 105 106 107 108 108 109 118
PAR_C                : 29 31 32 33 34 42 43 44 52 53 57 62 63 77 105 106 107 108 108 109 118
PRECISION            : 56
PTCOMA               : 12 13 18 19 23 42 43 64 78 79 83 84 108 109
PUNTO                : 96 120
REAL                 : 55
REFERENCES           : 31 34
RENAME               : 18 27
RESTA                : 116 122
RETURNING            : 72 79
SECOND               : 
SELECT               : 82 83 84
SESSION_USER         : 22
SET                  : 39 64
SMALLINT             : 51
SUM                  : 105
SUMA                 : 121
TABLE                : 13 23 42 43
TEXT                 : 48
THEN                 : 102
TIME                 : 59
TIMESTAMP            : 58
TO                   : 18 19 27
TRUE                 : 
TYPE                 : 38
UNIQUE               : 33
UPDATE               : 64
USE                  : 12
USING                : 73
VALUES               : 108 109
VARCHAR              : 62
VARYING              : 57
WHEN                 : 102
WHERE                : 64 75 89
YEAR                 : 
error                : 

Nonterminals, with rules where they appear

CONDICION_INNER_JOIN : 103
INNER_JOIN           : 87
LISTA_SELECT         : 85 86
LISTA_SELECT_LISTA   : 84 85
TIPO_DATO            : 28 38 47
Table_alter          : 35 36
WHERE_INSRT          : 88
alterDB_insrt        : 9
alterTable_add       : 24
alterTable_alter     : 25 35
alterTable_insrt     : 10
alterTable_type      : 23
alter_type           : 37
campos_c             : 31 31 33 34 34 40 81
case_insrt           : 97
constraint_esp       : 30
count_insrt          : 94
create_Table_isnrt   : 4
cuerpo_createTable   : 45 46
cuerpo_createTable_lista : 42 43 45
datos_insert         : 64 67 98 99 102 121 121 122 122 123 123 124 124 125 125 126 126 127 127 128 128 129 129 130 130 131 131 132
delete_cond_where    : 71 73 74
delete_condt         : 75
delete_esp           : 68
delete_insrt         : 7
delete_opcional      : 68
delete_parm          : 70
drop_insrt           : 11
estructura_when      : 100 101
estructura_when_lista : 98 99 100
expresion_logica     : 29 32 76 89 102 104 118 133 134
expresion_relacional : 113 114 133 134 135
herencia             : 43
init                 : 0
insert_insrt         : 6
instruccion          : 2 3
instrucciones        : 1 2
lista_datos          : 108 109 113
lista_parametros     : 110 111
lista_parametros_lista : 108 110
lista_tabla          : 14 15
lista_tablas_lista   : 13 14
lista_update         : 64 65
opcion_alterDB       : 17
opcion_select        : 90 91
opcion_select_lista  : 83 84 90
parametro_update     : 65 66
returning_exp        : 72 79
select_insrt         : 5
sub_queri            : 77
sum_insrt            : 93
update_insrt         : 8
usuarioDB            : 19

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . create_Table_isnrt
    (5) instruccion -> . select_insrt
    (6) instruccion -> . insert_insrt
    (7) instruccion -> . delete_insrt
    (8) instruccion -> . update_insrt
    (9) instruccion -> . alterDB_insrt
    (10) instruccion -> . alterTable_insrt
    (11) instruccion -> . drop_insrt
    (12) instruccion -> . USE ID DATABASE PTCOMA
    (42) create_Table_isnrt -> . CREATE TABLE ID PAR_A cuerpo_createTable_lista PAR_C PTCOMA
    (43) create_Table_isnrt -> . CREATE TABLE ID PAR_A cuerpo_createTable_lista PAR_C herencia PTCOMA
    (83) select_insrt -> . SELECT opcion_select_lista FROM ID AS ID PTCOMA
    (84) select_insrt -> . SELECT opcion_select_lista FROM ID AS ID LISTA_SELECT_LISTA PTCOMA
    (108) insert_insrt -> . INSERT INTO ID PAR_A lista_parametros_lista PAR_C VALUES PAR_A lista_datos PAR_C PTCOMA
    (109) insert_insrt -> . INSERT INTO ID VALUES PAR_A lista_datos PAR_C PTCOMA
    (68) delete_insrt -> . DELETE FROM delete_esp delete_opcional
    (64) update_insrt -> . UPDATE ID SET lista_update WHERE ID IGUAL datos_insert PTCOMA
    (17) alterDB_insrt -> . ALTER DATABASE ID opcion_alterDB
    (23) alterTable_insrt -> . ALTER TABLE ID alterTable_type PTCOMA
    (13) drop_insrt -> . DROP TABLE lista_tablas_lista PTCOMA

    USE             shift and go to state 12
    CREATE          shift and go to state 13
    SELECT          shift and go to state 14
    INSERT          shift and go to state 15
    DELETE          shift and go to state 16
    UPDATE          shift and go to state 17
    ALTER           shift and go to state 18
    DROP            shift and go to state 19

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    create_Table_isnrt             shift and go to state 4
    select_insrt                   shift and go to state 5
    insert_insrt                   shift and go to state 6
    delete_insrt                   shift and go to state 7
    update_insrt                   shift and go to state 8
    alterDB_insrt                  shift and go to state 9
    alterTable_insrt               shift and go to state 10
    drop_insrt                     shift and go to state 11

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . create_Table_isnrt
    (5) instruccion -> . select_insrt
    (6) instruccion -> . insert_insrt
    (7) instruccion -> . delete_insrt
    (8) instruccion -> . update_insrt
    (9) instruccion -> . alterDB_insrt
    (10) instruccion -> . alterTable_insrt
    (11) instruccion -> . drop_insrt
    (12) instruccion -> . USE ID DATABASE PTCOMA
    (42) create_Table_isnrt -> . CREATE TABLE ID PAR_A cuerpo_createTable_lista PAR_C PTCOMA
    (43) create_Table_isnrt -> . CREATE TABLE ID PAR_A cuerpo_createTable_lista PAR_C herencia PTCOMA
    (83) select_insrt -> . SELECT opcion_select_lista FROM ID AS ID PTCOMA
    (84) select_insrt -> . SELECT opcion_select_lista FROM ID AS ID LISTA_SELECT_LISTA PTCOMA
    (108) insert_insrt -> . INSERT INTO ID PAR_A lista_parametros_lista PAR_C VALUES PAR_A lista_datos PAR_C PTCOMA
    (109) insert_insrt -> . INSERT INTO ID VALUES PAR_A lista_datos PAR_C PTCOMA
    (68) delete_insrt -> . DELETE FROM delete_esp delete_opcional
    (64) update_insrt -> . UPDATE ID SET lista_update WHERE ID IGUAL datos_insert PTCOMA
    (17) alterDB_insrt -> . ALTER DATABASE ID opcion_alterDB
    (23) alterTable_insrt -> . ALTER TABLE ID alterTable_type PTCOMA
    (13) drop_insrt -> . DROP TABLE lista_tablas_lista PTCOMA

    $end            reduce using rule 1 (init -> instrucciones .)
    USE             shift and go to state 12
    CREATE          shift and go to state 13
    SELECT          shift and go to state 14
    INSERT          shift and go to state 15
    DELETE          shift and go to state 16
    UPDATE          shift and go to state 17
    ALTER           shift and go to state 18
    DROP            shift and go to state 19

    instruccion                    shift and go to state 20
    create_Table_isnrt             shift and go to state 4
    select_insrt                   shift and go to state 5
    insert_insrt                   shift and go to state 6
    delete_insrt                   shift and go to state 7
    update_insrt                   shift and go to state 8
    alterDB_insrt                  shift and go to state 9
    alterTable_insrt               shift and go to state 10
    drop_insrt                     shift and go to state 11

state 3

    (3) instrucciones -> instruccion .

    USE             reduce using rule 3 (instrucciones -> instruccion .)
    CREATE          reduce using rule 3 (instrucciones -> instruccion .)
    SELECT          reduce using rule 3 (instrucciones -> instruccion .)
    INSERT          reduce using rule 3 (instrucciones -> instruccion .)
    DELETE          reduce using rule 3 (instrucciones -> instruccion .)
    UPDATE          reduce using rule 3 (instrucciones -> instruccion .)
    ALTER           reduce using rule 3 (instrucciones -> instruccion .)
    DROP            reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> create_Table_isnrt .

    USE             reduce using rule 4 (instruccion -> create_Table_isnrt .)
    CREATE          reduce using rule 4 (instruccion -> create_Table_isnrt .)
    SELECT          reduce using rule 4 (instruccion -> create_Table_isnrt .)
    INSERT          reduce using rule 4 (instruccion -> create_Table_isnrt .)
    DELETE          reduce using rule 4 (instruccion -> create_Table_isnrt .)
    UPDATE          reduce using rule 4 (instruccion -> create_Table_isnrt .)
    ALTER           reduce using rule 4 (instruccion -> create_Table_isnrt .)
    DROP            reduce using rule 4 (instruccion -> create_Table_isnrt .)
    $end            reduce using rule 4 (instruccion -> create_Table_isnrt .)


state 5

    (5) instruccion -> select_insrt .

    USE             reduce using rule 5 (instruccion -> select_insrt .)
    CREATE          reduce using rule 5 (instruccion -> select_insrt .)
    SELECT          reduce using rule 5 (instruccion -> select_insrt .)
    INSERT          reduce using rule 5 (instruccion -> select_insrt .)
    DELETE          reduce using rule 5 (instruccion -> select_insrt .)
    UPDATE          reduce using rule 5 (instruccion -> select_insrt .)
    ALTER           reduce using rule 5 (instruccion -> select_insrt .)
    DROP            reduce using rule 5 (instruccion -> select_insrt .)
    $end            reduce using rule 5 (instruccion -> select_insrt .)


state 6

    (6) instruccion -> insert_insrt .

    USE             reduce using rule 6 (instruccion -> insert_insrt .)
    CREATE          reduce using rule 6 (instruccion -> insert_insrt .)
    SELECT          reduce using rule 6 (instruccion -> insert_insrt .)
    INSERT          reduce using rule 6 (instruccion -> insert_insrt .)
    DELETE          reduce using rule 6 (instruccion -> insert_insrt .)
    UPDATE          reduce using rule 6 (instruccion -> insert_insrt .)
    ALTER           reduce using rule 6 (instruccion -> insert_insrt .)
    DROP            reduce using rule 6 (instruccion -> insert_insrt .)
    $end            reduce using rule 6 (instruccion -> insert_insrt .)


state 7

    (7) instruccion -> delete_insrt .

    USE             reduce using rule 7 (instruccion -> delete_insrt .)
    CREATE          reduce using rule 7 (instruccion -> delete_insrt .)
    SELECT          reduce using rule 7 (instruccion -> delete_insrt .)
    INSERT          reduce using rule 7 (instruccion -> delete_insrt .)
    DELETE          reduce using rule 7 (instruccion -> delete_insrt .)
    UPDATE          reduce using rule 7 (instruccion -> delete_insrt .)
    ALTER           reduce using rule 7 (instruccion -> delete_insrt .)
    DROP            reduce using rule 7 (instruccion -> delete_insrt .)
    $end            reduce using rule 7 (instruccion -> delete_insrt .)


state 8

    (8) instruccion -> update_insrt .

    USE             reduce using rule 8 (instruccion -> update_insrt .)
    CREATE          reduce using rule 8 (instruccion -> update_insrt .)
    SELECT          reduce using rule 8 (instruccion -> update_insrt .)
    INSERT          reduce using rule 8 (instruccion -> update_insrt .)
    DELETE          reduce using rule 8 (instruccion -> update_insrt .)
    UPDATE          reduce using rule 8 (instruccion -> update_insrt .)
    ALTER           reduce using rule 8 (instruccion -> update_insrt .)
    DROP            reduce using rule 8 (instruccion -> update_insrt .)
    $end            reduce using rule 8 (instruccion -> update_insrt .)


state 9

    (9) instruccion -> alterDB_insrt .

    USE             reduce using rule 9 (instruccion -> alterDB_insrt .)
    CREATE          reduce using rule 9 (instruccion -> alterDB_insrt .)
    SELECT          reduce using rule 9 (instruccion -> alterDB_insrt .)
    INSERT          reduce using rule 9 (instruccion -> alterDB_insrt .)
    DELETE          reduce using rule 9 (instruccion -> alterDB_insrt .)
    UPDATE          reduce using rule 9 (instruccion -> alterDB_insrt .)
    ALTER           reduce using rule 9 (instruccion -> alterDB_insrt .)
    DROP            reduce using rule 9 (instruccion -> alterDB_insrt .)
    $end            reduce using rule 9 (instruccion -> alterDB_insrt .)


state 10

    (10) instruccion -> alterTable_insrt .

    USE             reduce using rule 10 (instruccion -> alterTable_insrt .)
    CREATE          reduce using rule 10 (instruccion -> alterTable_insrt .)
    SELECT          reduce using rule 10 (instruccion -> alterTable_insrt .)
    INSERT          reduce using rule 10 (instruccion -> alterTable_insrt .)
    DELETE          reduce using rule 10 (instruccion -> alterTable_insrt .)
    UPDATE          reduce using rule 10 (instruccion -> alterTable_insrt .)
    ALTER           reduce using rule 10 (instruccion -> alterTable_insrt .)
    DROP            reduce using rule 10 (instruccion -> alterTable_insrt .)
    $end            reduce using rule 10 (instruccion -> alterTable_insrt .)


state 11

    (11) instruccion -> drop_insrt .

    USE             reduce using rule 11 (instruccion -> drop_insrt .)
    CREATE          reduce using rule 11 (instruccion -> drop_insrt .)
    SELECT          reduce using rule 11 (instruccion -> drop_insrt .)
    INSERT          reduce using rule 11 (instruccion -> drop_insrt .)
    DELETE          reduce using rule 11 (instruccion -> drop_insrt .)
    UPDATE          reduce using rule 11 (instruccion -> drop_insrt .)
    ALTER           reduce using rule 11 (instruccion -> drop_insrt .)
    DROP            reduce using rule 11 (instruccion -> drop_insrt .)
    $end            reduce using rule 11 (instruccion -> drop_insrt .)


state 12

    (12) instruccion -> USE . ID DATABASE PTCOMA

    ID              shift and go to state 21


state 13

    (42) create_Table_isnrt -> CREATE . TABLE ID PAR_A cuerpo_createTable_lista PAR_C PTCOMA
    (43) create_Table_isnrt -> CREATE . TABLE ID PAR_A cuerpo_createTable_lista PAR_C herencia PTCOMA

    TABLE           shift and go to state 22


state 14

    (83) select_insrt -> SELECT . opcion_select_lista FROM ID AS ID PTCOMA
    (84) select_insrt -> SELECT . opcion_select_lista FROM ID AS ID LISTA_SELECT_LISTA PTCOMA
    (90) opcion_select_lista -> . opcion_select_lista COMA opcion_select
    (91) opcion_select_lista -> . opcion_select
    (92) opcion_select -> . ASTERISCO
    (93) opcion_select -> . sum_insrt
    (94) opcion_select -> . count_insrt
    (95) opcion_select -> . ID
    (96) opcion_select -> . ID PUNTO ID
    (97) opcion_select -> . case_insrt
    (105) sum_insrt -> . SUM PAR_A ID PAR_C
    (106) count_insrt -> . COUNT PAR_A ID PAR_C
    (107) count_insrt -> . COUNT PAR_A ASTERISCO PAR_C
    (98) case_insrt -> . CASE ID estructura_when_lista ELSE datos_insert END
    (99) case_insrt -> . CASE estructura_when_lista ELSE datos_insert END

    ASTERISCO       shift and go to state 26
    ID              shift and go to state 24
    SUM             shift and go to state 30
    COUNT           shift and go to state 31
    CASE            shift and go to state 32

    opcion_select_lista            shift and go to state 23
    opcion_select                  shift and go to state 25
    sum_insrt                      shift and go to state 27
    count_insrt                    shift and go to state 28
    case_insrt                     shift and go to state 29

state 15

    (108) insert_insrt -> INSERT . INTO ID PAR_A lista_parametros_lista PAR_C VALUES PAR_A lista_datos PAR_C PTCOMA
    (109) insert_insrt -> INSERT . INTO ID VALUES PAR_A lista_datos PAR_C PTCOMA

    INTO            shift and go to state 33


state 16

    (68) delete_insrt -> DELETE . FROM delete_esp delete_opcional

    FROM            shift and go to state 34


state 17

    (64) update_insrt -> UPDATE . ID SET lista_update WHERE ID IGUAL datos_insert PTCOMA

    ID              shift and go to state 35


state 18

    (17) alterDB_insrt -> ALTER . DATABASE ID opcion_alterDB
    (23) alterTable_insrt -> ALTER . TABLE ID alterTable_type PTCOMA

    DATABASE        shift and go to state 36
    TABLE           shift and go to state 37


state 19

    (13) drop_insrt -> DROP . TABLE lista_tablas_lista PTCOMA

    TABLE           shift and go to state 38


state 20

    (2) instrucciones -> instrucciones instruccion .

    USE             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    CREATE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    SELECT          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    INSERT          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    DELETE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    UPDATE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ALTER           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    DROP            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 21

    (12) instruccion -> USE ID . DATABASE PTCOMA

    DATABASE        shift and go to state 39


state 22

    (42) create_Table_isnrt -> CREATE TABLE . ID PAR_A cuerpo_createTable_lista PAR_C PTCOMA
    (43) create_Table_isnrt -> CREATE TABLE . ID PAR_A cuerpo_createTable_lista PAR_C herencia PTCOMA

    ID              shift and go to state 40


state 23

    (83) select_insrt -> SELECT opcion_select_lista . FROM ID AS ID PTCOMA
    (84) select_insrt -> SELECT opcion_select_lista . FROM ID AS ID LISTA_SELECT_LISTA PTCOMA
    (90) opcion_select_lista -> opcion_select_lista . COMA opcion_select

    FROM            shift and go to state 41
    COMA            shift and go to state 42


state 24

    (95) opcion_select -> ID .
    (96) opcion_select -> ID . PUNTO ID

    FROM            reduce using rule 95 (opcion_select -> ID .)
    COMA            reduce using rule 95 (opcion_select -> ID .)
    PUNTO           shift and go to state 43


state 25

    (91) opcion_select_lista -> opcion_select .

    FROM            reduce using rule 91 (opcion_select_lista -> opcion_select .)
    COMA            reduce using rule 91 (opcion_select_lista -> opcion_select .)


state 26

    (92) opcion_select -> ASTERISCO .

    FROM            reduce using rule 92 (opcion_select -> ASTERISCO .)
    COMA            reduce using rule 92 (opcion_select -> ASTERISCO .)


state 27

    (93) opcion_select -> sum_insrt .

    FROM            reduce using rule 93 (opcion_select -> sum_insrt .)
    COMA            reduce using rule 93 (opcion_select -> sum_insrt .)


state 28

    (94) opcion_select -> count_insrt .

    FROM            reduce using rule 94 (opcion_select -> count_insrt .)
    COMA            reduce using rule 94 (opcion_select -> count_insrt .)


state 29

    (97) opcion_select -> case_insrt .

    FROM            reduce using rule 97 (opcion_select -> case_insrt .)
    COMA            reduce using rule 97 (opcion_select -> case_insrt .)


state 30

    (105) sum_insrt -> SUM . PAR_A ID PAR_C

    PAR_A           shift and go to state 44


state 31

    (106) count_insrt -> COUNT . PAR_A ID PAR_C
    (107) count_insrt -> COUNT . PAR_A ASTERISCO PAR_C

    PAR_A           shift and go to state 45


state 32

    (98) case_insrt -> CASE . ID estructura_when_lista ELSE datos_insert END
    (99) case_insrt -> CASE . estructura_when_lista ELSE datos_insert END
    (100) estructura_when_lista -> . estructura_when_lista estructura_when
    (101) estructura_when_lista -> . estructura_when
    (102) estructura_when -> . WHEN expresion_logica THEN datos_insert

    ID              shift and go to state 46
    WHEN            shift and go to state 49

    estructura_when_lista          shift and go to state 47
    estructura_when                shift and go to state 48

state 33

    (108) insert_insrt -> INSERT INTO . ID PAR_A lista_parametros_lista PAR_C VALUES PAR_A lista_datos PAR_C PTCOMA
    (109) insert_insrt -> INSERT INTO . ID VALUES PAR_A lista_datos PAR_C PTCOMA

    ID              shift and go to state 50


state 34

    (68) delete_insrt -> DELETE FROM . delete_esp delete_opcional
    (69) delete_esp -> . ONLY ID
    (70) delete_esp -> . ID delete_parm

    ONLY            shift and go to state 52
    ID              shift and go to state 53

    delete_esp                     shift and go to state 51

state 35

    (64) update_insrt -> UPDATE ID . SET lista_update WHERE ID IGUAL datos_insert PTCOMA

    SET             shift and go to state 54


state 36

    (17) alterDB_insrt -> ALTER DATABASE . ID opcion_alterDB

    ID              shift and go to state 55


state 37

    (23) alterTable_insrt -> ALTER TABLE . ID alterTable_type PTCOMA

    ID              shift and go to state 56


state 38

    (13) drop_insrt -> DROP TABLE . lista_tablas_lista PTCOMA
    (14) lista_tablas_lista -> . lista_tablas_lista COMA lista_tabla
    (15) lista_tablas_lista -> . lista_tabla
    (16) lista_tabla -> . ID

    ID              shift and go to state 59

    lista_tablas_lista             shift and go to state 57
    lista_tabla                    shift and go to state 58

state 39

    (12) instruccion -> USE ID DATABASE . PTCOMA

    PTCOMA          shift and go to state 60


state 40

    (42) create_Table_isnrt -> CREATE TABLE ID . PAR_A cuerpo_createTable_lista PAR_C PTCOMA
    (43) create_Table_isnrt -> CREATE TABLE ID . PAR_A cuerpo_createTable_lista PAR_C herencia PTCOMA

    PAR_A           shift and go to state 61


state 41

    (83) select_insrt -> SELECT opcion_select_lista FROM . ID AS ID PTCOMA
    (84) select_insrt -> SELECT opcion_select_lista FROM . ID AS ID LISTA_SELECT_LISTA PTCOMA

    ID              shift and go to state 62


state 42
